border wrap fix

--- a/app/assets/stylesheets/mixins.sass
+++ b/app/assets/stylesheets/mixins.sass
@@ -37,7 +37,7 @@
 	-moz-border-radius: 3px
 	-webkit-border-radius: 3px
 	border-radius: 3px
-
+	white-space: nowrap
 	border: none
 	&, img
 		cursor: pointer
